Search Engine Optimization meta tag update

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="Title" content="부동산114 & HDC LABS Coding Convention" />
+    <meta http-equiv="Subject" content="코딩 가이드, Coding Convention" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="부동산114 & HDC LABS Coding Convention, 부동산114와 HDC LABS의 협업을 위한 코딩 가이드입니다."
     />
+    <meta
+      name="Keywords"
+      content="HDC현대산업개발, 현대산업개발, 부동산114, HDC LABS, 코딩 컨벤션, 코딩 규칙, 코딩 가이드, 부동산R114, 부동산일일사 , LABS , Coding Convention, Web, html, 웹 표준, 웹 접근성, 마크업, markup, css, javascript"
+    />
+    <meta http-equiv="Author" content="R114 DongJae" />
+    <meta http-equiv="Publisher" content="HDC현대산업개발 부동산114" />
+    <meta http-equiv="Other Agent" content="R114 DongJae" />
+    <meta http-equiv="Reply-To" content="masterforce999@r114.com" />
+    <meta http-equiv="Email" content="masterforce999@r114.com" />
+    <meta http-equiv="Distribution" content="R114 DongJae" />
+    <meta http-equiv="Copyright" content="copyright@HDC현대산업개발 부동산114" />
+    <meta http-equiv="Location" content="서울특별시 서초구 효령로 346 8,9층(서초동)" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Script-Type" content="Text/javascript" />
+    <meta http-equiv="Content-Script-Type" content="Text/css" />
+    <meta http-equiv="Content-Script-Type" content="Text/html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Generator" content="Visual Studio Code" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>부동산114 Coding Convention</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
